--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,13 +14,15 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="asset/SiteLogo.png" class="ms-5" /></a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0 d-flex-sm justify-content-center align-items-center">
                     <li class="nav-item mt-2">
                         <a class="nav-link" aria-current="page" href="#">About</a>
                     </li>
@@ -29,7 +31,7 @@
                     </li>
                     <li class="nav-item mt-2">
                         <a class="nav-link" href="#">Pricing</a>
-                    </li>
+                    </li> 
                     <li class="nav-item mt-2">
                         <a class="nav-link" href="#">Gallery</a>
                     </li>
@@ -38,33 +40,37 @@
                     </li>
                     <li class="nav-item mt-2">
                         <a class="nav-link" href="#"><button
-                                style=" background: linear-gradient(to bottom, #f6bb30, #f7f4d3); border-radius: 12px; border: none;">Contact
+                                style=" background: linear-gradient(to bottom, #f6bb30, #f7f4d3); border-radius: 5px; border: none;">Contact
                                 Us</button></a>
                     </li>
-
                 </ul>
-            </div>
+            </div>  <!-- navbar-list-ended -->
         </div>
     </nav>
-    <div class="container">
-        <div class="text">
-            <h1><b>GIVE ROBOTS A SECOND CHANCE</b></h1>
-            <p>
-                We save 1 million robots from destruction every year and find a new
-                home for them. Let's save the robots!
-            </p>
-            <a class="nav-link" href="#"><button
-                style=" background: linear-gradient(to bottom, #f6bb30, #f7f4d3); border-radius: 12px; border: none; width: 150px; height: 50px;">Contact
-                Us</button></a>
-        </div>
 
-        <div class="image">
-            <img src="asset/robot 1.png" alt="">
-        </div>
+    <div class="container-fluid">
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+        <div class="row justify-content-center align-items-center vh-100"> 
+            <div class="text col-lg-6 d-flex flex-column align-items-center p-4"> 
+                <h1 class="fs-lg-1 fs-sm-3 fs-md-2"><b>GIVE ROBOTS A SECOND CHANCE</b></h1>
+                <p>
+                    We save 1 million robots from destruction every year and find a new
+                    home for them. Let's save the robots!
+                </p>
+                <a class="" href="#"><button
+                        style=" background: linear-gradient(to bottom, #f6bb30, #f7f4d3); border-radius: 12px; border: none; width: 150px; height: 50px;">Contact
+                        Us</button></a>
+            </div>
+
+            <div class="image col-lg-6 d-flex justify-content-center align-items-center p-4"> <!-- Added d-flex, justify-content-center, align-items-center, and p-4 classes -->
+                <img src="asset/robot 1.png" alt="" class="w-75">
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
